syntax = "proto3";
package pb;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service UserService {

    rpc GetUser(GetUserRequest) returns (GetUserResponse) {
        option(google.api.http) = {
			get: "/api/v1/user/{id}"
		};
    }

    rpc PostUser(PostUserRequest) returns (PostUserResponse) {
        option (google.api.http) ={
			post: "/api/v1/user"
			body: "*"
		};
    }

    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
        option (google.api.http) ={
			put: "/api/v1/user"
			body: "*"
		};
    }

    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {
        option (google.api.http) ={
			delete: "/api/v1/user/{id}"
		};
    }
}

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

message PostUserRequest {
    string username = 1;
    string email = 2;
}

message PostUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    string username = 1;
    string email = 2;
}

message UpdateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {}
